Fix challenge clipping and add punctuation

--- a/app/register/challenge/styles.module.scss
+++ b/app/register/challenge/styles.module.scss
@@ -98,7 +98,7 @@
     // border-radius: 30px;
     margin-left: 24%;
     margin-right: 17%;
-    margin-top: 100px;
+    margin-top: 125px;
     overflow-y: scroll;
     @media (max-width: 1000px) {
         margin-left: 8%;
